--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "eslint": "8.56.0",
     "eslint-config-next": "14.1.0"
+  },
+  "engines": {
+    "node": "20.11.0"
   }
 }
